<resources>
    <string name="app_name">PadelPro</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">logout</string>
    <string name="court1">Rapid Racket Arena</string>
    <string name="court2">Victory Volley Venue</string>
    <string name="court3">Slam Dunk Sportsplex</string>
    <string name="court4">Elite Elevation Court</string>
    <string name="court5">Dynamic Smash Square</string>
    <string name="court6">Precision Padel Pavilion</string>
    <string name="court7">Supreme Serve Sanctuary</string>
    <string name="court8">Grand Slam Gardens</string>
    <string name="court9">Majestic Matchpoint Manor</string>
    <string name="court10">Zenith Zing Zone</string>
    <string name="play_fragment">Play Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_picture">profile picture</string>
    <string name="save_changes">Save changes</string>
    <string name="select_your_match_type">Select Your Match Type</string>
    <string name="competitive_match">Competitive Match</string>
    <string name="friendly_match">Friendly Match</string>
    <string name="select_the_gender_you_want_to_paly_with">Select the gender you want to paly with</string>
    <string name="all_players">All players</string>
    <string name="men_only">Men Only</string>
    <string name="women_only">Women Only</string>
    <string name="checkout">Checkout</string>
    <string name="reserve">Reserve</string>
    <string name="paddle_field_title">Paddle Field Title</string>
    <string name="select_data">Select Data</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="my_matches">My Matches</string>
    <string name="available">Available</string>
    <string name="stadium_name">Stadium Name</string>
    <string name="_23_dec_2023">23-Dec-2023</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>