<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MatchTypeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_your_match_type"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radio_competitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/competitive_match"
            android:textColor="@color/black"
            android:padding="20dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_friendly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendly_match"
            android:textColor="@color/black"
            android:padding="20dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_the_gender_you_want_to_paly_with"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <RadioButton
            android:id="@+id/radio_all_genders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_players"
            android:textColor="@color/black"
            android:padding="20dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_only"
            android:textColor="@color/black"
            android:padding="20dp"/>
        <RadioButton
            android:id="@+id/radio_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women_only"
            android:textColor="@color/black"
            android:padding="20dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>